--- a/obsidian.css
+++ b/obsidian.css
@@ -55,10 +55,36 @@
 *..........................1. Variables */
 :root,
 .theme-dark {
-  --main-node: #ffbe00;
-  --main-node-hover: #fe6a26;
-  --tags: #f19eee;
-  --external-link: #82d2e8;
+  --gray-dark-alt: #212121;
+  --gray-dark: #1b1b1b;
+  --gray: #424242;
+  --gray-mid-darkest: #616161;
+  --gray-mid-dark: #9a9a9a;
+  --gray-mid: #dedede;
+  --gray-mid-light: #e0e0e0;
+  --gray-light: #f8f8f2;
+  --gray-blue: #8cd0f0;
+  --bright-1: #8dc0f0;
+  --bright-2: #69e0f0;
+  --bright-3: #5fedde;
+  --bright-4: #81f7bc;
+  --bright-5: #b9fb93;
+  --bright-6: #f9f871;
+  --dark-1: #8cd0f0;
+  --dark-2: #84b6e5;
+  --dark-3: #8999d3;
+  --dark-4: #927cb7;
+  --dark-5: #995e94;
+  --dark-6: #964069;
+  --deep-violet: #6a0080;
+  --deep-blue: #007ac1;
+  --deep-green: #087f23;
+  --red: #f44336;
+  --deep-red: #ba000d;
+  --main-node: var(--dark-3);
+  --main-node-hover: var(--dark-4);
+  --tags: var(--dark-5);
+  --external-link: var(--gray-blue);
   --external-link-hidden: rgba(131, 197, 235, 0.3);
   --main-background: #242424;
   --secondary-background: #1b1b1b;
@@ -71,9 +97,11 @@
   --accent-5: #62deac;
   --accent-6: #62b7de;
   /* Overriding Obsidian Variables */
-  --default-font: 'JetBrains Mono', monospace;
-  --font-monospace: var(--default-font);
-  --text-normal: #c9c9c9;
+  --default-font: 'Fira Sans', 'Optima', 'Roboto', Helvetica Neue, Helvetica, Arial, sans-serif;
+  --font-monospace: 'Fira Code', 'Source Code Pro', monospace;
+  --font-tags: Architects Daughter, Helvetica Neue, Helvetica, Arial, sans-serif;
+  --font-header: var(--font-tags);
+  --text-normal: var(--gray-mid);
   --background-primary: var(--main-background);
   --background-secondary: var(--secondary-background);
 }
@@ -130,14 +158,12 @@ body {
 *..........................3. Text Decorations */
 .cm-s-obsidian .cm-strong,
 strong {
-  color: #57e28d;
   color: var(--accent-4);
-  font-weight: 900;
+  font-weight: 600;
 }
 
 .cm-em,
 em {
-  color: #f1eca5;
   color: var(--accent-3);
 }
 
@@ -167,16 +193,16 @@ mark em {
 }
 
 a {
-  color: var(--main-node);
+  color: var(--external-link);
 }
 
 .cm-s-obsidian span.cm-hmd-internal-link.cm-overlay {
-  color: var(--main-node);
+  color: var(--external-link);
   font-weight: 900;
 }
 
 .cm-s-obsidian span.cm-formatting-link {
-  color: var(--main-node);
+  color: var(--external-link);
   font-weight: 500;
 }
 
@@ -197,7 +223,27 @@ span.cm-formatting.cm-url + span.cm-url {
 }
 
 a:hover {
-  color: var(--main-node-hover);
+  color: var(--external-link-hidden);
+}
+
+span.nav {
+  border-top: 1px solid var(--background-modifier-border);
+  border-bottom: 1px solid var(--background-modifier-border);
+  clear: right;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.cm-header,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--font-header);
+  font-weight: 500;
 }
 
 a.external-link[href*='youtube'] {
@@ -425,32 +471,95 @@ a.external-link[href*='medium'] {
 
 .cm-header-1,
 h1 {
-  color: var(--accent-1);
+  color: var(--text-title-h1);
+  font-variant: common-ligatures small-caps;
+}
+
+blockquote .cm-header-1,
+blockquote h1 {
+  color: var(--text-title-h2);
+  font-variant: common-ligatures;
 }
 
 .cm-header-2,
 h2 {
-  color: var(--accent-2);
+  color: var(--text-title-h2);
 }
 
 .cm-header-3,
 h3 {
-  color: var(--accent-3);
+  color: var(--text-title-h3);
 }
 
 .cm-header-4,
 h4 {
-  color: var(--accent-4);
+  color: var(--text-title-h4);
 }
 
 .cm-header-5,
 h5 {
-  color: var(--accent-5);
+  color: var(--text-title-h5);
 }
 
 .cm-header-6,
 .markdown-preview-view h6 {
-  color: var(--accent-6);
+  color: var(--text-title-h6);
+}
+
+.markdown-preview-view h1:before,
+.markdown-preview-view h2:before,
+.markdown-preview-view h3:before,
+.markdown-preview-view h4:before,
+.markdown-preview-view h5:before,
+.markdown-preview-view h6:before {
+  content: "\00a7\00a0";
+  font-size: .6em;
+}
+
+.markdown-preview-view h1 code,
+.markdown-preview-view h2 code,
+.markdown-preview-view h3 code,
+.markdown-preview-view h4 code,
+.markdown-preview-view h5 code,
+.markdown-preview-view h6 code {
+  font-weight: normal;
+  font-size: 75%;
+}
+
+.cm-s-obsidian .cm-inline-code.cm-header {
+  font-weight: normal;
+  font-size: 90%;
+}
+
+.markdown-preview-view h1 a.tag,
+.markdown-preview-view h2 a.tag,
+.markdown-preview-view h3 a.tag,
+.markdown-preview-view h4 a.tag,
+.markdown-preview-view h5 a.tag,
+.markdown-preview-view h6 a.tag {
+  font-weight: normal;
+  font-size: 65%;
+  font-variant: common-ligatures;
+}
+
+.cm-s-obsidian .cm-header.cm-hashtag {
+  font-weight: normal;
+  font-size: 90%;
+  font-variant: common-ligatures small-caps;
+}
+
+.markdown-preview-view h1,
+.markdown-preview-view h2,
+.markdown-preview-view h3,
+.markdown-preview-view h4,
+.markdown-preview-view h5,
+.markdown-preview-view h6 {
+  margin: 10px 0 5px 0;
+}
+
+h1:first-of-type {
+  padding-bottom: 0px !important;
+  margin-bottom: -20px !important;
 }
 
 .CodeMirror-cursor,
@@ -461,6 +570,7 @@ h5 {
 .cm-s-obsidian span.cm-hashtag,
 .tag {
   color: var(--tags);
+  font-family: var(--font-tags);
 }
 
 .nav-file-tag {
@@ -709,6 +819,11 @@ table tbody tr:hover {
 
 .internal-embed.is-loaded .markdown-embed {
   border: 0px solid black;
+  margin: 0;
+}
+
+.markdown-embed .markdown-preview-view {
+  padding-top: 10px !important;
 }
 
 /*
@@ -983,6 +1098,12 @@ div[alt~='float-left'] {
   float: left;
   margin-right: 1rem;
   margin-top: 1rem;
+}
+
+div[src$="#portrait"] {
+  float: right;
+  margin-left: 5px;
+  width: 200px;
 }
 
 /*
