headings / dangling links

--- a/SCSS/Spectrum.scss
+++ b/SCSS/Spectrum.scss
@@ -84,6 +84,7 @@
 @import '_blocks/_workspace/scrollbar';
 @import '_blocks/_workspace/folders';
 
+
 /*
 *..........................5. Tables */
 @import '_blocks/tables';
@@ -137,3 +138,5 @@
 /*
 *..........................100. Other People's Plugins */
 @import '_blocks/_other-peoples-plugins/day-planner';
+@import '_blocks/_other-peoples-plugins/dangling-links';
+
