--- a/SCSS/_blocks/_listings/_list.scss
+++ b/SCSS/_blocks/_listings/_list.scss
@@ -1,10 +1,10 @@
 .cm-hmd-list-indent .cm-tab,
-ul ul {
+.workspace-leaf-content[data-type=markdown] ul ul {
   position: relative;
 }
 
 .cm-hmd-list-indent .cm-tab::before,
-ul ul::before {
+.workspace-leaf-content[data-type=markdown] ul ul::before {
   content: '';
   border-left: 1px solid var(--main-node);
   position: absolute;
@@ -13,11 +13,11 @@ ul ul::before {
   bottom: 0;
 }
 
-ul li {
+.workspace-leaf-content[data-type=markdown] ul li {
   margin-bottom: 10px;
 }
 
-ul li::marker {
+.workspace-leaf-content[data-type=markdown] ul li::marker {
   color: white;
 }
 
