--- a/SCSS/_blocks/_textdecoration/_headings.scss
+++ b/SCSS/_blocks/_textdecoration/_headings.scss
@@ -10,7 +10,7 @@ h6 {
 }
 
 .cm-header-1,
-h1 {
+.workspace-leaf-content[data-type=markdown] h1 {
   color: var(--text-title-h1);
   font-variant: common-ligatures small-caps;
 }
@@ -22,27 +22,27 @@ blockquote h1 {
 }
 
 .cm-header-2,
-h2 {
+.workspace-leaf-content[data-type=markdown] h2 {
   color: var(--text-title-h2);
 }
 
 .cm-header-3,
-h3 {
+.workspace-leaf-content[data-type=markdown] h3 {
   color: var(--text-title-h3);
 }
 
 .cm-header-4,
-h4 {
+.workspace-leaf-content[data-type=markdown] h4 {
   color: var(--text-title-h4);
 }
 
 .cm-header-5,
-h5 {
+.workspace-leaf-content[data-type=markdown] h5 {
   color: var(--text-title-h5);
 }
 
 .cm-header-6,
-.markdown-preview-view h6 {
+.workspace-leaf-content[data-type=markdown] .markdown-preview-view h6 {
   color: var(--text-title-h6);
 }
 
@@ -56,12 +56,12 @@ h5 {
   font-size: .6em;
 }
 
-.markdown-preview-view h1 code,
-.markdown-preview-view h2 code,
-.markdown-preview-view h3 code,
-.markdown-preview-view h4 code,
-.markdown-preview-view h5 code,
-.markdown-preview-view h6 code {
+.workspace-leaf-content[data-type=markdown] .markdown-preview-view h1 code,
+.workspace-leaf-content[data-type=markdown] .markdown-preview-view h2 code,
+.workspace-leaf-content[data-type=markdown] .markdown-preview-view h3 code,
+.workspace-leaf-content[data-type=markdown] .markdown-preview-view h4 code,
+.workspace-leaf-content[data-type=markdown] .markdown-preview-view h5 code,
+.workspace-leaf-content[data-type=markdown] .markdown-preview-view h6 code {
   font-weight: normal;
   font-size: 75%;
 }
@@ -71,12 +71,12 @@ h5 {
   font-size: 90%;
 }
 
-.markdown-preview-view h1 a.tag,
-.markdown-preview-view h2 a.tag,
-.markdown-preview-view h3 a.tag,
-.markdown-preview-view h4 a.tag,
-.markdown-preview-view h5 a.tag,
-.markdown-preview-view h6 a.tag {
+.workspace-leaf-content[data-type=markdown] .markdown-preview-view h1 a.tag,
+.workspace-leaf-content[data-type=markdown] .markdown-preview-view h2 a.tag,
+.workspace-leaf-content[data-type=markdown] .markdown-preview-view h3 a.tag,
+.workspace-leaf-content[data-type=markdown] .markdown-preview-view h4 a.tag,
+.workspace-leaf-content[data-type=markdown] .markdown-preview-view h5 a.tag,
+.workspace-leaf-content[data-type=markdown] .markdown-preview-view h6 a.tag {
   font-weight: normal;
   font-size: 65%;
   font-variant: common-ligatures;
@@ -85,7 +85,7 @@ h5 {
 .cm-s-obsidian .cm-header.cm-hashtag {
   font-weight: normal;
   font-size: 90%;
-  font-variant: common-ligatures small-caps;
+  font-variant: common-ligatures;
 }
 
 .markdown-preview-view h1, 
@@ -100,4 +100,11 @@ h5 {
 h1:first-of-type {
   padding-bottom: 0px !important;
   margin-bottom: -20px !important;
+}
+
+.view-content h1:first-of-type,
+.view-content h2:first-of-type,
+.view-content h3:first-of-type {
+  padding-top: 0px !important;
+  margin: 0;
 }
