--- a/obsidian.css
+++ b/obsidian.css
@@ -470,7 +470,7 @@ a.external-link[href*='medium'] {
 }
 
 .cm-header-1,
-h1 {
+.workspace-leaf-content[data-type=markdown] h1 {
   color: var(--text-title-h1);
   font-variant: common-ligatures small-caps;
 }
@@ -482,27 +482,27 @@ blockquote h1 {
 }
 
 .cm-header-2,
-h2 {
+.workspace-leaf-content[data-type=markdown] h2 {
   color: var(--text-title-h2);
 }
 
 .cm-header-3,
-h3 {
+.workspace-leaf-content[data-type=markdown] h3 {
   color: var(--text-title-h3);
 }
 
 .cm-header-4,
-h4 {
+.workspace-leaf-content[data-type=markdown] h4 {
   color: var(--text-title-h4);
 }
 
 .cm-header-5,
-h5 {
+.workspace-leaf-content[data-type=markdown] h5 {
   color: var(--text-title-h5);
 }
 
 .cm-header-6,
-.markdown-preview-view h6 {
+.workspace-leaf-content[data-type=markdown] .markdown-preview-view h6 {
   color: var(--text-title-h6);
 }
 
@@ -516,12 +516,12 @@ h5 {
   font-size: .6em;
 }
 
-.markdown-preview-view h1 code,
-.markdown-preview-view h2 code,
-.markdown-preview-view h3 code,
-.markdown-preview-view h4 code,
-.markdown-preview-view h5 code,
-.markdown-preview-view h6 code {
+.workspace-leaf-content[data-type=markdown] .markdown-preview-view h1 code,
+.workspace-leaf-content[data-type=markdown] .markdown-preview-view h2 code,
+.workspace-leaf-content[data-type=markdown] .markdown-preview-view h3 code,
+.workspace-leaf-content[data-type=markdown] .markdown-preview-view h4 code,
+.workspace-leaf-content[data-type=markdown] .markdown-preview-view h5 code,
+.workspace-leaf-content[data-type=markdown] .markdown-preview-view h6 code {
   font-weight: normal;
   font-size: 75%;
 }
@@ -531,12 +531,12 @@ h5 {
   font-size: 90%;
 }
 
-.markdown-preview-view h1 a.tag,
-.markdown-preview-view h2 a.tag,
-.markdown-preview-view h3 a.tag,
-.markdown-preview-view h4 a.tag,
-.markdown-preview-view h5 a.tag,
-.markdown-preview-view h6 a.tag {
+.workspace-leaf-content[data-type=markdown] .markdown-preview-view h1 a.tag,
+.workspace-leaf-content[data-type=markdown] .markdown-preview-view h2 a.tag,
+.workspace-leaf-content[data-type=markdown] .markdown-preview-view h3 a.tag,
+.workspace-leaf-content[data-type=markdown] .markdown-preview-view h4 a.tag,
+.workspace-leaf-content[data-type=markdown] .markdown-preview-view h5 a.tag,
+.workspace-leaf-content[data-type=markdown] .markdown-preview-view h6 a.tag {
   font-weight: normal;
   font-size: 65%;
   font-variant: common-ligatures;
@@ -545,7 +545,7 @@ h5 {
 .cm-s-obsidian .cm-header.cm-hashtag {
   font-weight: normal;
   font-size: 90%;
-  font-variant: common-ligatures small-caps;
+  font-variant: common-ligatures;
 }
 
 .markdown-preview-view h1,
@@ -560,6 +560,13 @@ h5 {
 h1:first-of-type {
   padding-bottom: 0px !important;
   margin-bottom: -20px !important;
+}
+
+.view-content h1:first-of-type,
+.view-content h2:first-of-type,
+.view-content h3:first-of-type {
+  padding-top: 0px !important;
+  margin: 0;
 }
 
 .CodeMirror-cursor,
@@ -863,12 +870,12 @@ table tbody tr:hover {
 /*
 *..........................10. Listings */
 .cm-hmd-list-indent .cm-tab,
-ul ul {
+.workspace-leaf-content[data-type=markdown] ul ul {
   position: relative;
 }
 
 .cm-hmd-list-indent .cm-tab::before,
-ul ul::before {
+.workspace-leaf-content[data-type=markdown] ul ul::before {
   content: '';
   border-left: 1px solid var(--main-node);
   position: absolute;
@@ -877,11 +884,11 @@ ul ul::before {
   bottom: 0;
 }
 
-ul li {
+.workspace-leaf-content[data-type=markdown] ul li {
   margin-bottom: 10px;
 }
 
-ul li::marker {
+.workspace-leaf-content[data-type=markdown] ul li::marker {
   color: white;
 }
 
@@ -1171,4 +1178,14 @@ div[src$="#portrait"] {
 .day-planner .day-planner-progress-bar {
   background: var(--secondary-background);
   background: #cfcfcf;
+}
+
+.workspace-leaf-content[data-type=dangling-links] {
+  padding-top: 0px;
+  font-size: .9em;
+  color: var(--text-muted);
+}
+
+.workspace-leaf-content[data-type=dangling-links] ul {
+  padding-inline-start: 18px;
 }
