--- a/SCSS/_blocks/_textdecoration/_headings.scss
+++ b/SCSS/_blocks/_textdecoration/_headings.scss
@@ -97,14 +97,7 @@ blockquote h1 {
   margin: 10px 0 5px 0;
 }
 
-h1:first-of-type {
-  padding-bottom: 0px !important;
-  margin-bottom: -20px !important;
-}
-
-.view-content h1:first-of-type,
-.view-content h2:first-of-type,
-.view-content h3:first-of-type {
-  padding-top: 0px !important;
-  margin: 0;
+span.subhead {
+  display: block;
+  margin-top: -20px;
 }
