--- a/obsidian.css
+++ b/obsidian.css
@@ -198,12 +198,12 @@ a {
 
 .cm-s-obsidian span.cm-hmd-internal-link.cm-overlay {
   color: var(--external-link);
-  font-weight: 900;
+  font-weight: 400;
 }
 
 .cm-s-obsidian span.cm-formatting-link {
   color: var(--external-link);
-  font-weight: 500;
+  font-weight: 400;
 }
 
 .cm-s-obsidian span.cm-url,
@@ -557,16 +557,9 @@ blockquote h1 {
   margin: 10px 0 5px 0;
 }
 
-h1:first-of-type {
-  padding-bottom: 0px !important;
-  margin-bottom: -20px !important;
-}
-
-.view-content h1:first-of-type,
-.view-content h2:first-of-type,
-.view-content h3:first-of-type {
-  padding-top: 0px !important;
-  margin: 0;
+span.subhead {
+  display: block;
+  margin-top: -20px;
 }
 
 .CodeMirror-cursor,
