--- a/obsidian.css
+++ b/obsidian.css
@@ -73,41 +73,38 @@
 }
 
 .theme-dark {
-  --gray-blue: #B0C4DE;
-  --bright-1: #8dc0f0;
-  --bright-2: #69e0f0;
-  --bright-3: #5fedde;
-  --bright-4: #81f7bc;
-  --bright-5: #b9fb93;
-  --bright-6: #f9f871;
-  --dark-1: #8cd0f0;
-  --dark-2: #84b6e5;
-  --dark-3: #8999d3;
-  --dark-4: #927cb7;
-  --dark-5: #995e94;
-  --dark-6: #964069;
-  --main-node: var(--dark-3);
-  --main-node-hover: var(--dark-4);
-  --attachments: var(--bright-4);
-  --tags: var(--bright-2);
-  --external-link: var(--gray-blue);
+  --bright-1: #ffeb64;
+  --bright-2: #63ff9d;
+  --bright-3: #86dff9;
+  --dark-1: #64c4ff;
+  --dark-2: #ff9e64;
+  --dark-3: #9f65ff;
+  --pop-1: #cdfce0;
+  --pop-2: #cdfdf8;
+  --pop-3: #cdeafc;
+  --alt: #aea5be;
+  --main-node: var(--dark-1);
+  --main-node-hover: var(--bright-3);
+  --attachments: var(--pop-3);
+  --tags: var(--alt);
+  --external-link: var(--alt);
   --external-link-hidden: rgba(131, 197, 235, 0.3);
   --main-background: var(--gray-dark-4);
   --secondary-background: var(--gray-dark-5);
   --background-primary: var(--main-background);
   --background-secondary: var(--secondary-background);
-  --text-title-h1: var(--bright-6);
-  --text-title-h2: var(--bright-5);
-  --text-title-h3: var(--bright-4);
-  --text-title-h4: var(--bright-3);
-  --text-title-h5: var(--bright-2);
-  --text-title-h6: var(--bright-1);
-  --accent-1: var(--dark-6);
-  --accent-2: var(--dark-5);
-  --accent-3: var(--dark-4);
-  --accent-4: var(--dark-3);
-  --accent-5: var(--dark-2);
-  --accent-6: var(--dark-1);
+  --text-title-h1: var(--bright-1);
+  --text-title-h2: var(--bright-2);
+  --text-title-h3: var(--bright-3);
+  --text-title-h4: var(--dark-1);
+  --text-title-h5: var(--dark-1);
+  --text-title-h6: var(--dark-1);
+  --accent-1: var(--dark-3);
+  --accent-2: var(--dark-2);
+  --accent-3: var(--dark-1);
+  --accent-4: var(--bright-3);
+  --accent-5: var(--bright-2);
+  --accent-6: var(--bright-1);
   --text-normal: var(--gray-light-2);
   --text-muted: var(--gray);
   --text-faint: var(--gray-dark-2);
@@ -116,23 +113,21 @@
 }
 
 .theme-light {
-  --gray-blue: #748b99;
-  --bright-1: #3f7dee;
-  --bright-2: #cd73df;
-  --bright-3: #ff75b4;
-  --bright-4: #ff9583;
-  --bright-5: #ffc764;
-  --bright-6: #f9f871;
-  --dark-1: #3f7dee;
-  --dark-2: #7171dd;
-  --dark-3: #8d65c9;
-  --dark-4: #9e59b3;
-  --dark-5: #a8509d;
-  --dark-6: #ac4988;
-  --main-node: var(--dark-3);
-  --main-node-hover: var(--dark-4);
-  --attachments: var(--bright-4);
-  --tags: var(--dark-5);
+  --bright-1: #bb9800;
+  --bright-2: #689900;
+  --bright-3: #00997d;
+  --dark-1: #006899;
+  --dark-2: #993000;
+  --dark-3: #990068;
+  --pop-1: #456600;
+  --pop-2: #530066;
+  --pop-3: #016;
+  --alt: #433464;
+  --main-node: var(--dark-1);
+  --main-node-hover: var(--bright-3);
+  --attachments: var(--pop-3);
+  --tags: var(--alt);
+  --external-link: var(--alt);
   --external-link: var(--gray-blue);
   --external-link-hidden: rgba(131, 197, 235, 0.3);
   --main-background: var(--gray-light-5);
@@ -141,36 +136,23 @@
   --background-secondary: var(--secondary-background);
   --background-primary-alt: var(--gray-light-3);
   --background-secondary-alt: var(--gray-light-4);
-  --text-title-h1: var(--dark-1);
-  --text-title-h2: var(--dark-2);
-  --text-title-h3: var(--dark-3);
-  --text-title-h4: var(--dark-4);
-  --text-title-h5: var(--dark-5);
-  --text-title-h6: var(--dark-6);
-  --accent-1: var(--dark-6);
-  --accent-2: var(--dark-5);
-  --accent-3: var(--dark-4);
-  --accent-4: var(--dark-3);
-  --accent-5: var(--dark-2);
-  --accent-6: var(--dark-1);
+  --text-title-h1: var(--bright-1);
+  --text-title-h2: var(--bright-2);
+  --text-title-h3: var(--bright-3);
+  --text-title-h4: var(--dark-1);
+  --text-title-h5: var(--dark-1);
+  --text-title-h6: var(--dark-1);
+  --accent-1: var(--dark-3);
+  --accent-2: var(--dark-2);
+  --accent-3: var(--dark-1);
+  --accent-4: var(--bright-3);
+  --accent-5: var(--bright-2);
+  --accent-6: var(--bright-1);
   --text-normal: var(--gray-dark-3);
   --text-muted: var(--gray-dark-2);
   --text-faint: var(--gray);
   --text-accent: var(--main-node);
   --text-accent-hover: var(--main-node-hover);
-}
-
-:root,
-.theme-light {
-  --main-background: #f5f5f5;
-  --secondary-background: #e2e2e2;
-  --secondary-background-low-opacity: #e2e2e254;
-  --main-node: #dea500;
-  --accent-3: #b7ad3a;
-  --accent-4: #8ac536;
-  --accent-5: #3cad7f;
-  --external-link: #307a8e;
-  --external-link-hidden: #307a8e99;
 }
 
 /*
@@ -181,7 +163,9 @@ body {
 }
 
 .markdown-preview-view div p {
-  margin-bottom: 1.5rem;
+  margin-bottom: .5rem;
+  margin-block-start: .5em;
+  margin-block-end: .5em;
 }
 
 .markdown-source-view.is-readable-line-width .CodeMirror {
@@ -262,10 +246,6 @@ a {
 
 .cm-s-obsidian span.cm-url,
 .cm-s-obsidian span.cm-formatting-link.cm-link {
-  color: var(--external-link);
-}
-
-span.cm-formatting.cm-url + span.cm-url {
   color: var(--external-link-hidden);
 }
 
@@ -278,15 +258,6 @@ span.cm-formatting.cm-url + span.cm-url {
 
 a:hover {
   color: var(--external-link-hidden);
-}
-
-span.nav {
-  border-top: 1px solid var(--background-modifier-border);
-  border-bottom: 1px solid var(--background-modifier-border);
-  clear: right;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
 }
 
 .cm-header,
@@ -611,11 +582,6 @@ blockquote h1 {
   margin: 10px 0 5px 0;
 }
 
-span.subhead {
-  display: block;
-  margin-top: -20px;
-}
-
 .CodeMirror-cursor,
 .CodeMirror div.CodeMirror-secondarycursor {
   border-color: var(--main-node);
@@ -916,6 +882,14 @@ table tbody tr:hover {
 
 /*
 *..........................10. Listings */
+.markdown-preview-view ul {
+  margin-block-start: .5em;
+  margin-block-end: .5em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 40px;
+}
+
 .cm-hmd-list-indent .cm-tab,
 .workspace-leaf-content[data-type=markdown] ul ul {
   position: relative;
@@ -932,7 +906,7 @@ table tbody tr:hover {
 }
 
 .workspace-leaf-content[data-type=markdown] ul li {
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
 .theme-dark .workspace-leaf-content[data-type=markdown] ul li::marker {
