--- a/obsidian.css
+++ b/obsidian.css
@@ -53,6 +53,7 @@
 */
 /*
 *..........................1. Variables */
+@import url("https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap");
 :root {
   --gray-light-5: #fafafa;
   --gray-light-4: #f5f5f5;
