--- a/SCSS/_blocks/_variables.scss
+++ b/SCSS/_blocks/_variables.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
+
 :root {
   --gray-light-5: #fafafa;
   --gray-light-4: #f5f5f5;
