--- a/SCSS/_blocks/_textdecoration/_links.scss
+++ b/SCSS/_blocks/_textdecoration/_links.scss
@@ -1,6 +1,10 @@
 a {
   color: var(--external-link);
 }
+a:hover {
+  color: var(--text-accent-hover);
+  font-weight: bold;
+}
 
 .cm-s-obsidian span.cm-hmd-internal-link.cm-overlay {
   color: var(--external-link);
@@ -24,7 +28,11 @@ a {
   color: var(--external-link);
 }
 
-a:hover {
-  color: var(--external-link-hidden);
+.markdown-preview-view .external-link,
+.markdown-preview-view .internal-link {
+  text-decoration: underline var(--text-accent);
 }
-
+.markdown-preview-view .internal-link.is-unresolved {
+  opacity: 1;
+  text-decoration: dashed underline var(--text-accent);
+}
