--- a/obsidian.css
+++ b/obsidian.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /*
 * Tested with Obsidian v0.10.11 
 *
@@ -66,6 +65,21 @@
   --gray-dark-3: #424242;
   --gray-dark-4: #212121;
   --gray-dark-5: #1b1b1b;
+  --violet: #d05ce3;
+  --deep-violet: #6a0080;
+  --blue: #29b6f6;
+  --deep-blue: #007ac1;
+  --cyan: #00bcd4;
+  --bright-cyan: #05e2ff;
+  --bright-green: #b9fb93;
+  --green: #4caf50;
+  --deep-green: #087f23;
+  --yellow: #ffc107;
+  --orange: #ff9800;
+  --red: #f44336;
+  --deep-red: #ba000d;
+  --magenta: #e91e63;
+  --bright-pink: #ff8fb4;
   /* Overriding Obsidian Variables */
   --default-font: 'PT Sans', Helvetica Neue, Helvetica, Arial, sans-serif;
   --font-monospace: 'Fira Code', 'Source Code Pro', monospace;
@@ -80,16 +94,18 @@
   --dark-1: #64c4ff;
   --dark-2: #ff9e64;
   --dark-3: #9f65ff;
-  --pop-1: #cdfce0;
-  --pop-2: #cdfdf8;
-  --pop-3: #cdeafc;
-  --alt: #aea5be;
+  --pop-1: var(--violet);
+  --pop-2: var(--orange);
+  --pop-3: var(--yellow);
   --main-node: var(--dark-1);
   --main-node-hover: var(--bright-3);
+  --text-accent: var(--main-node);
+  --text-accent-hover: var(--main-node-hover);
   --attachments: var(--pop-3);
-  --tags: var(--alt);
-  --external-link: var(--alt);
-  --external-link-hidden: rgba(131, 197, 235, 0.3);
+  --tags: var(--bright-pink);
+  --alt: var(--gray-light-3);
+  --external-link: var(--gray-light-2);
+  --external-link-hidden: var(--deep-blue);
   --main-background: var(--gray-dark-4);
   --secondary-background: var(--gray-dark-5);
   --background-primary: var(--main-background);
@@ -100,17 +116,15 @@
   --text-title-h4: var(--dark-1);
   --text-title-h5: var(--dark-1);
   --text-title-h6: var(--dark-1);
-  --accent-1: var(--dark-3);
-  --accent-2: var(--dark-2);
-  --accent-3: var(--dark-1);
+  --accent-1: var(--pop-1);
+  --accent-2: var(--pop-2);
+  --accent-3: var(--pop-3);
   --accent-4: var(--bright-3);
   --accent-5: var(--bright-2);
   --accent-6: var(--bright-1);
   --text-normal: var(--gray-light-2);
   --text-muted: var(--gray);
   --text-faint: var(--gray-dark-2);
-  --text-accent: var(--main-node);
-  --text-accent-hover: var(--main-node-hover);
 }
 
 .theme-light {
@@ -130,7 +144,7 @@
   --tags: var(--alt);
   --external-link: var(--alt);
   --external-link: var(--gray-blue);
-  --external-link-hidden: rgba(131, 197, 235, 0.3);
+  --external-link-hidden: rgba(136, 9, 130, 0.3);
   --main-background: var(--gray-light-5);
   --secondary-background: var(--gray-light-4);
   --background-primary: var(--main-background);
@@ -197,7 +211,7 @@ body {
 *..........................3. Text Decorations */
 .cm-s-obsidian .cm-strong,
 strong {
-  color: var(--accent-4);
+  color: var(--accent-2);
   font-weight: 600;
 }
 
@@ -235,6 +249,11 @@ a {
   color: var(--external-link);
 }
 
+a:hover {
+  color: var(--text-accent-hover);
+  font-weight: bold;
+}
+
 .cm-s-obsidian span.cm-hmd-internal-link.cm-overlay {
   color: var(--external-link);
   font-weight: 400;
@@ -257,19 +276,14 @@ a {
   color: var(--external-link);
 }
 
-a:hover {
-  color: var(--external-link-hidden);
+.markdown-preview-view .external-link,
+.markdown-preview-view .internal-link {
+  text-decoration: underline var(--text-accent);
 }
 
-.cm-header,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: var(--font-header);
-  font-weight: 500;
+.markdown-preview-view .internal-link.is-unresolved {
+  opacity: 1;
+  text-decoration: dashed underline var(--text-accent);
 }
 
 a.external-link[href*='youtube'] {
@@ -493,6 +507,17 @@ a.external-link[href*='medium'] {
   height: 1rem;
   width: 1rem;
   content: '';
+}
+
+.cm-header,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--font-header);
+  font-weight: 500;
 }
 
 .cm-header-1,
@@ -916,67 +941,6 @@ table tbody tr:hover {
 
 .theme-light .workspace-leaf-content[data-type=markdown] ul li::marker {
   color: var(--gray-dark-5);
-}
-
-.markdown-preview-view ul > li.task-list-item.is-checked {
-  text-decoration: none;
-}
-
-.markdown-preview-view .task-list-item-checkbox {
-  -webkit-appearance: none;
-  box-sizing: border-box;
-  border: 1px solid var(--text-muted);
-  border-radius: 2px;
-  position: relative;
-  width: 1.3em;
-  height: 1.3em;
-  margin: 0;
-  outline: none;
-  margin-right: 4px;
-  margin-bottom: 2px;
-  cursor: pointer;
-  vertical-align: baseline;
-  margin-right: 1rem;
-  filter: none;
-}
-
-.markdown-preview-view li .task-list-item-checkbox:checked::before {
-  content: '✔';
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 150%;
-  height: 160%;
-  line-height: 0;
-  font-size: 1.5rem;
-  color: var(--main-node);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.markdown-preview-view li li .task-list-item-checkbox:checked::before {
-  color: var(--accent-1);
-}
-
-.markdown-preview-view li li li .task-list-item-checkbox:checked::before {
-  color: var(--accent-2);
-}
-
-.markdown-preview-view li li li li .task-list-item-checkbox:checked::before {
-  color: var(--accent-3);
-}
-
-.markdown-preview-view li li li li li .task-list-item-checkbox:checked::before {
-  color: var(--accent-4);
-}
-
-.markdown-preview-view li li li li li li .task-list-item-checkbox:checked::before {
-  color: var(--accent-5);
-}
-
-.markdown-preview-view li li li li li li li .task-list-item-checkbox:checked::before {
-  color: var(--accent-6);
 }
 
 /*
